recursion.logo.lessons.recursion.logo.koch.Crab.scala.error
Crab:2: error: reassignment to val
  if (levels=0){
            ^